[tool.poetry]
name = "project-with-missing-extra-directory-dependency"
version = "1.2.3"
description = "This is a description"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "*"
missing = { path = "./missing", optional = true }

[tool.poetry.extras]
notinstallable = ["missing"]
