[project]
name = "foobar"
version = "0.1.0"
description = ""
authors = [
    { name = "Poetry Developer", email =  "<developer@python-poetry.org>" }
]
dynamic = ["dependencies", "requires-python"]

[tool.poetry.dependencies]
python = "^3.8"
docker = { version = ">=4.3.1", source = "PyPI" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
