[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
check-argv0 = "scripts.check_argv0:main"
exit-code = "scripts.exit_code:main"
return-code = "scripts.return_code:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
