[project]
name = "simple-project"
version = "1.2.3"
description = "Some description."
authors = [
    { name = "SeÌbastien Eustace", email = "sebastien@eustace.io" }
]
license = { text = "MIT" }
readme = "README.rst"
keywords = ["packaging", "dependency", "poetry"]
dynamic = [ "classifiers", "dependencies", "requires-python" ]

[project.urls]
homepage = "https://python-poetry.org"
repository = "https://github.com/python-poetry/poetry"
documentation = "https://python-poetry.org/docs"

[project.scripts]
foo = "foo:bar"
baz = "bar:baz.boom.bim"
fox = "fuz.foo:bar.baz"

[tool.poetry]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Requirements
[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"
